# zagel

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  test.http
.cargo/: config.toml
.github/actions/setup-linux/: action.yml
.github/workflows/: ci.yml  packaging-update.yml  release.yml
http/collection1/: test.http
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/chocolatey/: zagel.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/homebrew/: zagel.rb
packaging/scoop/: zagel.json
packaging/winget/manifests/s/Sharno/Zagel/0.3.0/: Sharno.Zagel.installer.yaml  Sharno.Zagel.locale.en-US.yaml  Sharno.Zagel.yaml
scripts/: release_checksums.py  release_packaging.py
src/: app.rs  cli.rs  icons.rs  launch.rs  main.rs  model.rs  net.rs  parser.rs  pathing.rs  state.rs  theme.rs
src/app/: automation.rs  domain.rs  headers.rs  history.rs  hotkeys.rs  lifecycle.rs  messages.rs  mod.rs  options.rs  reducer.rs  state.rs  status.rs  update.rs  view.rs  watcher.rs
src/app/view/: auth.rs  mod.rs  response.rs  sidebar.rs  workspace.rs
tests/: e2e_automation.rs
tests/ui/fixtures/workspace/requests/: sample.http
tests/ui/scenarios/: rest_send_status.toml  smoke.toml  snapshot_only.toml  ui_navigation.toml
