[package]
name = "zagel"
version = "0.1.0"
edition = "2024"
description = "Desktop REST workbench with .http/.env collections and persisted state."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharno/zagel"
readme = "README.md"
keywords = ["http", "rest", "client", "gui", "iced"]
categories = ["network-programming", "gui"]

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
anyhow = "1.0.89"
iced = { version = "0.12.1", features = ["tokio", "image"] }
reqwest = { version = "0.12.8", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
time = { version = "0.3.36", features = ["macros"] }
walkdir = "2.5.0"
dirs = "5.0.1"
toml = "0.8.19"
