[package]
name = "zagel"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Desktop REST workbench with .http/.env collections and persisted state."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sharno/zagel"
readme = "README.md"
keywords = ["http", "rest", "client", "gui", "iced"]
categories = ["network-programming", "gui"]

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[dependencies]
anyhow = "1.0.89"
iced = { version = "0.14.0", features = ["tokio", "image", "highlighter"] }
iced_highlighter = "0.14.0"
reqwest = { version = "0.12.8", default-features = false, features = [
    "json",
    "gzip",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
time = { version = "0.3.36", features = ["macros"] }
walkdir = "2.5.0"
dirs = "5.0.1"
toml = "0.8.19"
base64 = "0.22.1"
notify = "8.2.0"
scraper = "0.20"
ego-tree = "0.6"
vec1 = "1.12.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
iced_fonts = { version = "0.3", features = ["bootstrap"] }

[dev-dependencies]
tempfile = "3.12.0"
futures = "0.3.31"
